@@ -8,6 +8,8 @@ import static seedu.address.testutil.Assert.assertThrows;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -69,10 +71,10 @@ public class DutyTest {
 
     @Test
     public void constructorWithValidDutyList() {
-        List<LocalDate> dutyList = List.of(
+        List<LocalDate> dutyList = new ArrayList<>(Arrays.asList(
                 LocalDate.of(2025, 1, 1),
                 LocalDate.of(2025, 2, 2),
-                LocalDate.of(2025, 3, 3)
+                LocalDate.of(2025, 3, 3))
         );
         Duty duty = new Duty(dutyList);
         assertEquals(dutyList, duty.getDutyList());
